# ros2control

./: README.md
Control/turtle/: CMakeLists.txt  package.xml  turtle.gazebo.xacro
Control/turtle/config/: joint_controllers.yaml  mapper_params_online_async.yaml  velocity_publisher.cpp
Control/turtle/gazebo/: turtle.gazebo.xacro
Control/turtle/launch/: Rlaunch.py  klaunch.py  launch (Copy).py  launch.py  rsp.launch.py  turtle_robot_spawn.launch.py
Control/turtle/meshes/collision/: Back_left1.STL  Back_right1.STL  Front_left2.STL  Front_right1.STL  Front_right2.STL  base_link.STL
Control/turtle/meshes/visual/: Back_left2.stl  Back_right2.stl  Front_left1.stl
Control/turtle/rviz/: rviz_basic_settings.rviz
Control/turtle/src/: hslam.py  odometry_publisher.py  publisher.py  ros2_control.xacro  tpublisher  velocity_publisher.py
Control/turtle/urdf/: URDF1.urdf.xacro  frames_2024-11-18_16.50.59.gv  gazebo_control.xarco  robot.urdf.xacro
Control/turtle/videos/: Hardware limitations.webm  Screencast from 2024-12-15 15-26-16.webm  Videos_HardwareLimitation.webm
Control/turtle/worlds/: SANDY_TERRAINII.dae  world.sdf
